apps/calidum-rotae/base/shell-provider/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell-provider-service
spec:
  selector:
    app: shell-provider
  clusterIP: None
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
